# bootcamp-python

./: pyproject.toml  vendas_total.parquet
aula01/: kpi.py
aula03/: desafio03.py
aula03/exercicios_aula03/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py
aula04/: main.py
aula07/: exercicio_01.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_05.py  exercicio_06.py
aula07/desafio/: etl.py  pipeline.py  projeto.py
aula08/: etl.py  models.py  pipeline.py
aula08/utils/: decorators.py
desafio/: desafio.py
exercicios_aula02/boolean/: 16.py  17.py  18.py  19.py  20.py
exercicios_aula02/float/: 10.py  6.py  7.py  8.py  9.py
exercicios_aula02/inteiros/: 1.py  2.py  3.py  4.py  5.py
exercicios_aula02/string/: 11.py  12.py  13.py  14.py  15.py
