[project]
name = "bootcamp_python"
version = "0.1.0"
description = ""
authors = [
    {name = "Maisson Fernandes",email = "maaisson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandera (>=0.26.1,<0.27.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
